# accuweather-cli

./: README.md  pyproject.toml
src/accuweather_cli/: __init__.py  __main__.py  cli.py  const.py  transform.py
tests/: test_transform.py
